syntax = "proto3";

// import "google/protobuf/empty.proto";
// import "google/protobuf/wrappers.proto";

package auth;

// Сервис аутентификации и управления пользователями
service AuthService {
  rpc SignIn (SignInRequest) returns (AuthResponse) {}
  rpc SignUp (SignUpRequest) returns (AuthResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse) {}
  rpc FindAllUsers (FindAllUsersRequest) returns (UserListResponse) {}
  rpc GetProfile (GetProfileRequest) returns (User) {}
  rpc UpdateUserInfo (UpdateUserRequest) returns (User) {}
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  UserName name = 3;
  optional uint32 role_id = 4;
  string phone = 5;
  optional uint32 workspace_id = 6; // ID коворкинга для привязки менеджера
}

message UpdateUserRequest {
  SignUpRequest user_info = 1;
  optional string ban_reason = 2;
  uint32 id = 3;
  optional bool is_banned = 4;  // New field for ban status
}

message GetProfileRequest {
  uint64 id = 1;
}

message FindAllUsersRequest {
  optional string name_filter = 1;
  optional bool is_banned = 2;   
  optional bool has_telegram = 3;
  optional uint32 role_id = 4;   
  optional uint32 offset = 5;    
  optional uint32 limit = 6;     
  uint32 current_role_id = 7;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}


message UserName {
  string first_name = 1;
  string last_name = 2;
  optional string middle_name = 3;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message UserListResponse {
  repeated User users = 1;
}

message User {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  optional string middle_name = 4;
  string email = 5;
  string phone = 6;
  bool banned = 7;
  string reason_banned = 8;
  Role role = 9;
}

message Role {
  uint32 id = 1;
  string value = 2;
  string description = 3;
}
